# verbum-counter

./: .gitignore  README.md  package-lock.json  package.json
data/: rust-wikipedia.txt
lib/: index.js  wordcount_node.js  wordcount_rust.js
native/: Cargo.toml
native/src/: lib.rs
