[package]
name = "verbum-counter"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "verbum_counter"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rayon = "1.3.1"
multimap = "0.8.1"